delete theme btn name

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
   </style> -->
 </head>
 <body>
-  <button id="theme-toggle">🌙 Темная тема</button>
+  <button id="theme-toggle">🌙 </button>
   <header>
     <h1>Кафейня "Арома"</h1>
     <nav>
